# fast_api_do_zero

./: pyproject.toml
migrations/: env.py
migrations/versions/: 51764ee6267d_create_users_table.py  815d6b150d2d_atualizar_campos_nulos_para_falso.py  f2877108289e_update_users_field_updated_at.py  f55cf27081fa_update_users_field_updated_at.py
src/fast_zero/: app.py  models.py  settings.py
tests/: conftest.py  test_app.py  test_db.py
