[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "jacksonrodrigodev",email = "jackson_techno2@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)"
]

[tool.poetry]
packages = [{include = "fast_zero", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12.*,<4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.ruff]
line-length = 79
extend-exclude =['migration']

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.taskipy.tasks]
run = "fastapi dev src/fast_zero/app.py --host 0.0.0.0"
pre_test = "task lint"
test = "pytest --cov=src/fast_zero -vv"
post_test = "coverage html"
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
